objects/Validation_Rule__c.object
<CustomObject>
    <description>It consists of all the validation rules related to a object.</description>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the validation rule.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the validation rule.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Condition_Formula_1__c</fullName>
        <description>It consists first 255 characters of the validation rule error condition formula.</description>
        <label>Error Condition Formula 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Condition_Formula_2__c</fullName>
        <description>It consists part of error condition formula that is after first 255 characters of the validation rule error condition formula.</description>
        <label>Error Condition Formula 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Condition_Formula__c</fullName>
        <description>Condition at which validation rule fires.</description>
        <label>Error Condition Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This message will appear when Error Condition formula is true.</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object to which this validation rule applies.</description>
        <label>Related to Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Validation Rules</relationshipLabel>
        <relationshipName>Validation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Validation Rules</relationshipLabel>
        <relationshipName>Validation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Validation Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Validation Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>